--- a/index.html
+++ b/index.html
@@ -5,32 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
+    <title>Assignment 2 - Tables</title>
 </head>
 
-<body>
+<body class="flex-container">
     <table>
         <caption>Weather Forecast</caption>
         <thead>
-            <th>Time</th>
-            <th>Temperature</th>
-            <th>Humidity</th>
+            <th class="time">Time</th>
+            <th class="temp">Temperature</th>
+            <th class="humid">Humidity</th>
         </thead>
         <tbody>
             <tr>
-                <td>7:00 PM</td>
-                <td>23&deg;</td>
-                <td>8%</td>
+                <td class="time">7:00 PM</td>
+                <td class="temp">23&deg;</td>
+                <td class="humid">8%</td>
             </tr>
             <tr>
-                <td>8:00 PM</td>
-                <td>24&deg;</td>
-                <td>9%</td>
+                <td class="time">8:00 PM</td>
+                <td class="temp">24&deg;</td>
+                <td class="humid">9%</td>
             </tr>
             <tr>
-                <td>9:00 PM</td>
-                <td>21&deg;</td>
-                <td>7%</td>
+                <td class="time">9:00 PM</td>
+                <td class="temp">21&deg;</td>
+                <td class="humid">7%</td>
             </tr>
         </tbody>
     </table>
